# tiny-diffusion

./: README.md  diffusion.py  gpt.py  hnet_core.py  hnet_diffusion.py  hnet_gpt.py  pyproject.toml  visualize.py
animations/: visualize.py
hnet_impl/: config_hnet.py  xf.py
