[project]
name = "diffusion-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.9.1",
]

[project.optional-dependencies]
hnet = [
    "mamba-ssm",
    "termcolor>=3.1.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
    "flash-attn==2.8.1",
    "causal-conv1d==1.5.2",
]
